# esp32_sta_wifi_out_of_tree

./: CMakeLists.txt  prj.conf
src/: main.c
